package page.aaws.b01.controller.transformer;

public abstract class FailTransformer implements Transformer {
}
