package page.aaws.b01.controller.transformer;

public abstract class OkTransformer implements Transformer {
}
