package page.aaws.b01.cqrs;

public interface Command extends CommandAndQuery {
}
