package page.aaws.b01.cqrs;

public interface Query extends CommandAndQuery {
}
